--- a/webclient/list_species.html
+++ b/webclient/list_species.html
@@ -34,8 +34,12 @@
   </nav>
 
   <div class="container body">
-    <h2>List of Species</h2>
-    <hr>
+    <h2>
+      List of Species
+      <a class="btn btn-default pull-right" href="add_species.html" title="Add Species">
+        <i class="fa fa-plus" aria-hidden="true"></i>
+      </a>
+    </h2>    <hr>
     <div id="species">
     </div>
   </div>
