--- a/webclient/list_zoos.html
+++ b/webclient/list_zoos.html
@@ -34,7 +34,12 @@
   </nav>
 
   <div class="container body">
-    <h2>List of Zoos</h2>
+    <h2>
+      List of Zoos
+      <a class="btn btn-default pull-right" href="add_zoo.html" title="Add Zoo">
+        <i class="fa fa-plus" aria-hidden="true"></i>
+      </a>
+    </h2>
     <hr>
     <div id="zoos">
     </div>
