--- a/webclient/edit_zoo.html
+++ b/webclient/edit_zoo.html
@@ -121,7 +121,7 @@
       <br>
       <hr>
       <div>
-        <input class="btn btn-primary" type="submit" name="add" value="Add Zoo" />
+        <input class="btn btn-primary" type="submit" name="add" value="Update Zoo" />
       </div>
     </form>
   </div>
