Fix forms and html

--- a/webclient/add_zoo.html
+++ b/webclient/add_zoo.html
@@ -41,32 +41,32 @@
       <div class="form-group row">
         <div class="col-lg-8 col-sm-6 col-xs-12">
           <label class="control-label" for="id_zoo_name">Zoo Name</label>
-          <input name="zoo_name" id="id_zoo_name" type="text" class="form-control" value="" placeholder="ex: Abilene Zoo" maxlength="100" required aria-describedby="id_close_help">
-          <small id="id_close_help" class="form-text text-muted">Only alpha characters allowed (no apostrophes, periods, etc.)</small>
+          <input name="zoo_name" id="id_zoo_name" type="text" class="form-control" value="" placeholder="ex: Abilene Zoo" maxlength="100" required aria-describedby="id_closing_help">
+          <small id="id_closing_help" class="form-text text-muted">Only alpha characters allowed (no apostrophes, periods, etc.)</small>
         </div>
         <div class="col-lg-2 col-sm-3 col-xs-6">
-          <label class="control-label" for="id_open_hour">Opening Time</label>
+          <label class="control-label" for="id_opening_hour">Opening Time</label>
           <div class="row">
             <div class="col-xs-6">
-              <select name="open_hour" id="id_open_hour" class="form-control" aria-describedby="id_open_hour_help"></select>
-              <small id="id_open_hour_help" class="form-text text-muted">24-hour format</small>
+              <select name="opening_hour" id="id_opening_hour" class="form-control" aria-describedby="id_opening_hour_help"></select>
+              <small id="id_opening_hour_help" class="form-text text-muted">hour</small>
             </div>
             <div class="col-xs-6">
-              <select name="open_minute" id="id_open_minute" class="form-control" aria-describedby="id_open_minute_help"></select>
-              <small id="id_open_hour_help" class="form-text text-muted">minute</small>
+              <select name="opening_minute" id="id_opening_minute" class="form-control" aria-describedby="id_opening_minute_help"></select>
+              <small id="id_opening_hour_help" class="form-text text-muted">minute</small>
             </div>
           </div>
         </div>
         <div class="col-lg-2 col-sm-3 col-xs-6">
-          <label class="control-label" for="id_close_hour">Closing Time</label>
+          <label class="control-label" for="id_closing_hour">Closing Time</label>
           <div class="row">
             <div class="col-xs-6">
-              <select name="close_hour" id="id_close_hour" class="form-control" aria-describedby="id_close_hour_help"></select>
-              <small id="id_close_hour_help" class="form-text text-muted">24-hour format</small>
+              <select name="closing_hour" id="id_closing_hour" class="form-control" aria-describedby="id_closing_hour_help"></select>
+              <small id="id_closing_hour_help" class="form-text text-muted">hour</small>
             </div>
             <div class="col-xs-6">
-              <select name="close_minute" id="id_close_minute" class="form-control" aria-describedby="id_close_minute_help"></select>
-              <small id="id_close_minute_help" class="form-text text-muted">minute</small>
+              <select name="closing_minute" id="id_closing_minute" class="form-control" aria-describedby="id_closing_minute_help"></select>
+              <small id="id_closing_minute_help" class="form-text text-muted">minute</small>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
           <select name="state" id="id_state" class="form-control" aria-describedby="id_state_help">
           <br>
           </select>
-          <small id="id_state_help" class="form-text text-muted">State abbreviation</small>
+          <small id="id_state_help" class="form-text text-muted">State abbrev.</small>
         </div>
       </div>
       <br>
