--- a/webclient/add_zoo.html
+++ b/webclient/add_zoo.html
@@ -42,7 +42,7 @@
         <div class="col-lg-8 col-sm-6 col-xs-12">
           <label class="control-label" for="id_zoo_name">Zoo Name</label>
           <input name="zoo_name" id="id_zoo_name" type="text" class="form-control" value="" placeholder="ex: Abilene Zoo" maxlength="100" required aria-describedby="id_closing_help">
-          <small id="id_closing_help" class="form-text text-muted">Only alpha characters allowed (no apostrophes, periods, etc.)</small>
+          <small id="id_zoo_help" class="form-text text-muted">Only alpha characters allowed (no apostrophes, periods, etc.)</small>
         </div>
         <div class="col-lg-2 col-sm-3 col-xs-6">
           <label class="control-label" for="id_opening_hour">Opening Time</label>
@@ -77,9 +77,6 @@
           <input name="website" id="id_website" type="text" class="form-control" value="" placeholder="ex: http://abilenezoo.org/" maxlength="100" required>
         </div>
       </div>
-      <br>
-      <h3>Location</h3>
-      <hr>
       <div class="form-group row">
         <div class="col-md-6 col-sm-6 col-xs-12">
           <label class="control-label" for="id_address">Address</label>
@@ -98,9 +95,6 @@
           <small id="id_state_help" class="form-text text-muted">State abbrev.</small>
         </div>
       </div>
-      <br>
-      <h3>Statistics</h3>
-      <hr>
       <div class="form-group row">
         <div class="col-sm-4 col-xs-6">
           <label class="control-label" for="id_num_animals">Number of Animals</label>
@@ -118,7 +112,6 @@
           <small id="id_acres_help" class="form-text text-muted">No commas</small>
         </div>
       </div>
-      <br>
       <hr>
       <div>
         <input class="btn btn-primary" type="submit" name="add" value="Add Zoo" />
