--- a/webclient/zoo.html
+++ b/webclient/zoo.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="list_zoos.html">List Zoos</a></li>
-          <li class="active"><a href="list_species.html">List Species</a></li>
+          <li><a href="list_species.html">List Species</a></li>
         </ul>
       </div>
     </div>
