added pencil and moved button off header line

--- a/webclient/zoo.html
+++ b/webclient/zoo.html
@@ -36,10 +36,10 @@
   <div class="container body">
     <h2>
       <div id="zooName">
+         <a class="btn btn-default pull-right" href="edit_zoo.html" title="Edit Zoo">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+         </a>
       </div>
-      <a class="btn btn-default pull-right" href="edit_zoo.html" title="Edit Zoo">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-      </a>
     </h2>    <hr>
     <div id="zooInfo">
     </div>
