--- a/webclient/species.html
+++ b/webclient/species.html
@@ -36,10 +36,10 @@
   <div class="container body">
     <h2>
       <div id="speciesName">
+        <a class="btn btn-default pull-right" href="edit_species.html" title="Edit Zoo">
+          <i class="fa fa-pencil" aria-hidden="true"></i>
+        </a>
       </div>
-      <a class="btn btn-default pull-right" href="edit_species.html" title="Edit Zoo">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-      </a>
     </h2>    <hr>
     <div id="speciesInfo">
     </div>
