shorten to zoos

--- a/webclient/species.html
+++ b/webclient/species.html
@@ -43,7 +43,7 @@
     </h2>    <hr>
     <div id="speciesInfo">
     </div>
-    <h2> Zoos where you can find this species
+    <h2> Zoos
     </h2>    <hr>
     <div id="zoos">
     </div>
