--- a/webclient/species.html
+++ b/webclient/species.html
@@ -36,7 +36,7 @@
   <div class="container body">
     <h2>
       <div id="speciesName">
-        <a class="btn btn-default pull-right" href="edit_species.html" title="Edit Zoo">
+        <a id="editLink" class="btn btn-default pull-right" href="" title="Edit Zoo">
           <i class="fa fa-pencil" aria-hidden="true"></i>
         </a>
       </div>
