--- a/webclient/species.html
+++ b/webclient/species.html
@@ -43,6 +43,10 @@
     </h2>    <hr>
     <div id="speciesInfo">
     </div>
+    <h2> Classification
+    </h2>
+    <div id="classificationInfo">
+    </div>
     <h2> Zoos
     </h2>    <hr>
     <div id="zoos">
