--- a/webclient/edit_zoo.html
+++ b/webclient/edit_zoo.html
@@ -106,6 +106,7 @@
       <hr>
       <div>
         <input class="btn btn-primary" type="submit" name="add" value="Update" />
+        <a class="btn btn-default" id="id_cancel" href="#">Cancel</a>
       </div>
     </form>
   </div>
