add and delete for zoo page

--- a/webclient/zoo.html
+++ b/webclient/zoo.html
@@ -47,6 +47,12 @@
     </h2>    <hr>
     <div id="species">
     </div>
+    <div class="dropdown">
+        <button onclick="getSpeciesNotExhbited()"class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Add Species
+          <span class="caret"></span></button>
+          <ul id = "dropdownitems" class="dropdown-menu">
+          </ul>
+  </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
