--- a/webclient/add_species.html
+++ b/webclient/add_species.html
@@ -49,7 +49,7 @@
           <input name="common_name" id="id_common_name" type="text" class="form-control" value="" placeholder="ex: Sun Parakeet;Sun Conure" maxlength="100" required>
           <small id="id_common_name_help" class="form-text text-muted">Separate common names with semicolons.</small>
         </div>
-        <div class="col-sm-4 col-xs-9">
+        <div class="col-sm-6 col-xs-9">
           <label class="control-label" for="id_genus">Genus</label>
           <input name="region" id="id_genus" type="text" class="form-control" value="" placeholder="ex: Abilene" maxlength="50" required>
         </div>
@@ -64,7 +64,7 @@
             </select>
             <small id="id_family_help" class="form-text text-muted">Classification</small>
         </div>
-        <div class="col-sm-4 col-xs-9">
+        <div class="col-sm-6 col-xs-9">
             <label class="control-label" for="id_status">Status</label>
             <br>
             <select name="status" id="id_status" class="form-control" aria-describedby="id_status_help">
@@ -76,12 +76,12 @@
       <div class="form-group row">
         <div class="col-md-6 col-sm-6 col-xs-12">
           <label class="control-label" for="id_region">Region</label>
-          <select name="region" id="id_region" class="form-control">
+          <select multiple="true" name="region" id="id_region" class="form-control">
           </select>
         </div>
         <div class="col-md-6 col-sm-6 col-xs-12">
           <label class="control-label" for="id_habitat">Habitat</label>
-          <select name="habitat" id="id_habitat" class="form-control">
+          <select multiple="true" name="habitat" id="id_habitat" class="form-control">
           </select>
         </div>
       </div>
