still nee to add help comment saying ctrl click to select multiple

--- a/webclient/edit_species.html
+++ b/webclient/edit_species.html
@@ -44,7 +44,7 @@
         </div>
         <div class="col-sm-6 col-xs-9">
           <label class="control-label" for="id_genus">Genus</label>
-          <input name="region" id="id_genus" type="text" class="form-control" value="" placeholder="ex: Abilene" maxlength="50" required>
+          <input name="region" id="id_genus" type="text" class="form-control" value="" placeholder="ex: aratinga" maxlength="50" required>
         </div>
       </div>
       <div class="form-group row">
