Semicolon to commas

--- a/webclient/add_species.html
+++ b/webclient/add_species.html
@@ -46,8 +46,8 @@
       <div class="form-group row">
         <div class="col-lg-8 col-sm-6 col-xs-12">
           <label class="control-label" for="id_common_name">Common Names</label>
-          <input name="common_name" id="id_common_name" type="text" class="form-control" value="" placeholder="ex: Sun Parakeet;Sun Conure" maxlength="100" required>
-          <small id="id_common_name_help" class="form-text text-muted">Separate common names with semicolons.</small>
+          <input name="common_name" id="id_common_name" type="text" class="form-control" value="" placeholder="ex: Sun Parakeet,Sun Conure" maxlength="100" required>
+          <small id="id_common_name_help" class="form-text text-muted">Separate common names with commas</small>
         </div>
         <div class="col-sm-6 col-xs-9">
           <label class="control-label" for="id_genus">Genus</label>
